--- a/My LBS/Resources/es_mapping_geofenceevent.json
+++ b/My LBS/Resources/es_mapping_geofenceevent.json
@@ -14,6 +14,24 @@
                     }
                 }
             },
+            "esid": {
+                "type": "text",
+                "fields": {
+                    "keyword": {
+                        "type": "keyword",
+                        "ignore_above": 200
+                    }
+                }
+            },
+            "device": {
+                "type": "text",
+                "fields": {
+                    "keyword": {
+                        "type": "keyword",
+                        "ignore_above": 200
+                    }
+                }
+            },
             "eventType": {
                 "type": "text",
                 "fields": {
